<resources>
    <string name="app_name">Database</string>
    <string name="action_settings">Settings</string>
    <string name="product_id_unassigned">Not assigned</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add_button">Add</string>
    <string name="find_button">Find</string>
    <string name="delete_button">Delete</string>
    <string name="no_match">No Match Found</string>
    <string name="update_button">Update</string>
    <string name="delall_button">Delete All</string>
</resources>
